--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+.button {
+  margin-left: 20px;
+  padding: 10px 20px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: white;
+  background-color: cadetblue;
+  border: none;
+  border-radius: 15px;
+}
+
+.list {
+  height: 50px;
+  width: 400px;
+  margin: auto;
+}
+
 .App {
   text-align: center;
 }
