--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,14 @@
-.button {
-  margin-left: 20px;
-  padding: 10px 20px;
-  font-size: 18px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: white;
-  background-color: cadetblue;
-  border: none;
-  border-radius: 15px;
-}
-
 .list {
-  height: 50px;
-  width: 400px;
-  margin: auto;
+  margin-bottom: 25px;
 }
 
 .App {
-  text-align: center;
+  text-align: left;
+  margin-left: 25px;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+  margin-left: 35px;
+  margin-bottom: 25px;
 }
